--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -15,3 +15,18 @@
         tenancy: default
         state: "{{state}}"
       register: vpcout
+
+    - debug:
+        var: vpcout
+
+    - name: create public subnet 1 in zone1
+        ec2_vpc_net:
+          vpc_id: "{{vpcout.vpc.id}}"
+          cidr_block: "{{pubSub1Cidr}}"
+          region: "{{region}}"
+          az: "{{zone1}}"
+          state: "{{state}}"
+          map_public: yes
+          resource_tags:
+          name: vprofile-pubsub1
+      register: pubsub1_out
