--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -16,17 +16,43 @@
         state: "{{state}}"
       register: vpcout
 
-    - debug:
-        var: vpcout
+ #   - debug:
+ #       var: vpcout
 
     - name: create public subnet 1 in zone1
       ec2_vpc_net:
         vpc_id: "{{vpcout.vpc.id}}"
-        cidr_block: "{{pubSub1Cidr}}"
+        cidr: "{{pubSub1Cidr}}"
         region: "{{region}}"
         az: "{{zone1}}"
         state: "{{state}}"
         map_public: yes
         resource_tags:
-        name: vprofile-pubsub1
+          name: vprofile-pubsub1
       register: pubsub1_out
+
+
+    - name: create public subnet 2 in zone2
+      ec2_vpc_net:
+        vpc_id: "{{vpcout.vpc.id}}"
+        cidr: "{{pubSub2Cidr}}"
+        region: "{{region}}"
+        az: "{{zone2}}"
+        state: "{{state}}"
+        map_public: yes
+        resource_tags:
+          name: vprofile-pubsub2
+      register: pubsub2_out
+
+
+    - name: create public subnet 3 in zone3
+      ec2_vpc_net:
+        vpc_id: "{{vpcout.vpc.id}}"
+        cidr: "{{pubSub3Cidr}}"
+        region: "{{region}}"
+        az: "{{zon3}}"
+        state: "{{state}}"
+        map_public: yes
+        resource_tags:
+          name: vprofile-pubsub3
+      register: pubsub3_out
