--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -7,9 +7,9 @@
 
     - name: create vprofile vpc
       ec2_vpc_net:
-        name: "{{vpc_name}}"
-        cidr_block: "{{vpccidr}}"
-        region: "{{region}}"
+        name: "{{ vpc_name }}"
+        cidr_block: "{{ vpccidr }}"
+        region: "{{ region }}"
         dns_support: yes
         dns_hostnames: yes
         tenancy: default
@@ -24,11 +24,11 @@
         vpc_id: "{{vpcout.vpc.id}}"
         cidr: "{{pubSub1Cidr}}"
         region: "{{region}}"
-        az: "{{zone1}}"
+        az: "{{ zone1 }}"
         state: "{{state}}"
         map_public: yes
         resource_tags:
-          name: vprofile-pubsub1
+          name: vprofile_pubsub1
       register: pubsub1_out
 
 
@@ -37,11 +37,11 @@
         vpc_id: "{{vpcout.vpc.id}}"
         cidr: "{{pubSub2Cidr}}"
         region: "{{region}}"
-        az: "{{zone2}}"
+        az: "{{ zone2 }}"
         state: "{{state}}"
         map_public: yes
         resource_tags:
-          name: vprofile-pubsub2
+          name: vprofil_pubsub2
       register: pubsub2_out
 
 
@@ -50,9 +50,9 @@
         vpc_id: "{{vpcout.vpc.id}}"
         cidr: "{{pubSub3Cidr}}"
         region: "{{region}}"
-        az: "{{zon3}}"
+        az: "{{ zone3 }}"
         state: "{{state}}"
         map_public: yes
         resource_tags:
-          name: vprofile-pubsub3
+          name: vprofil_pubsub3
       register: pubsub3_out
