--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -22,10 +22,10 @@
     - name: create public subnet 1 in zone1
       ec2_vpc_net:
         vpc_id: "{{vpcout.vpc.id}}"
-        cidr: "{{pubSub1Cidr}}"
         region: "{{region}}"
         az: "{{ zone1 }}"
         state: "{{state}}"
+        cidr: "{{pubSub1Cidr}}"
         map_public: yes
         resource_tags:
           name: vprofile_pubsub1
@@ -35,24 +35,24 @@
     - name: create public subnet 2 in zone2
       ec2_vpc_net:
         vpc_id: "{{vpcout.vpc.id}}"
-        cidr: "{{pubSub2Cidr}}"
         region: "{{region}}"
         az: "{{ zone2 }}"
         state: "{{state}}"
+        cidr: "{{pubSub2Cidr}}"
         map_public: yes
         resource_tags:
-          name: vprofil_pubsub2
+          name: vprofile_pubsub2
       register: pubsub2_out
 
 
     - name: create public subnet 3 in zone3
       ec2_vpc_net:
         vpc_id: "{{vpcout.vpc.id}}"
-        cidr: "{{pubSub3Cidr}}"
         region: "{{region}}"
         az: "{{ zone3 }}"
         state: "{{state}}"
+        cidr: "{{pubSub3Cidr}}"
         map_public: yes
         resource_tags:
-          name: vprofil_pubsub3
+          name: vprofile_pubsub3
       register: pubsub3_out
