--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -13,7 +13,7 @@
         dns_support: yes
         dns_hostnames: yes
         tenancy: default
-        state: "{{state}}"
+        state: "{{ state }}"
       register: vpcout
 
  #   - debug:
@@ -21,12 +21,12 @@
 
     - name: create public subnet 1 in zone1
       ec2_vpc_net:
-        vpc_id: "{{vpcout.vpc.id}}"
-        region: "{{region}}"
+        vpc_id: "{{ vpcout.vpc.id }}"
+        region: "{{ region }}"
         az: "{{ zone1 }}"
-        state: "{{state}}"
-        cidr: "{{pubSub1Cidr}}"
-        map_public: yes
+        state: "{{ state }}"
+        cidr: "{{ pubSub1Cidr }}"
+        map_public: true
         resource_tags:
           name: vprofile_pubsub1
       register: pubsub1_out
@@ -34,12 +34,12 @@
 
     - name: create public subnet 2 in zone2
       ec2_vpc_net:
-        vpc_id: "{{vpcout.vpc.id}}"
-        region: "{{region}}"
+        vpc_id: "{{ vpcout.vpc.id }}"
+        region: "{{ region }}"
         az: "{{ zone2 }}"
-        state: "{{state}}"
-        cidr: "{{pubSub2Cidr}}"
-        map_public: yes
+        state: "{{ state }}"
+        cidr: "{{ pubSub2Cidr }}"
+        map_public: true
         resource_tags:
           name: vprofile_pubsub2
       register: pubsub2_out
@@ -47,12 +47,12 @@
 
     - name: create public subnet 3 in zone3
       ec2_vpc_net:
-        vpc_id: "{{vpcout.vpc.id}}"
-        region: "{{region}}"
+        vpc_id: "{{ vpcout.vpc.id }}"
+        region: "{{ region }}"
         az: "{{ zone3 }}"
-        state: "{{state}}"
-        cidr: "{{pubSub3Cidr}}"
-        map_public: yes
+        state: "{{ state }}"
+        cidr: "{{ pubSub3Cidr }}"
+        map_public: true
         resource_tags:
           name: vprofile_pubsub3
       register: pubsub3_out
