--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -20,7 +20,7 @@
  #       var: vpcout
 
     - name: create public subnet 1 in zone1
-      ec2_vpc_net:
+      ec2_vpc_subnet:
         vpc_id: "{{ vpcout.vpc.id }}"
         region: "{{ region }}"
         az: "{{ zone1 }}"
@@ -33,7 +33,7 @@
 
 
     - name: create public subnet 2 in zone2
-      ec2_vpc_net:
+      ec2_vpc_subnet:
         vpc_id: "{{ vpcout.vpc.id }}"
         region: "{{ region }}"
         az: "{{ zone2 }}"
@@ -46,7 +46,7 @@
 
 
     - name: create public subnet 3 in zone3
-      ec2_vpc_net:
+      ec2_vpc_subnet:
         vpc_id: "{{ vpcout.vpc.id }}"
         region: "{{ region }}"
         az: "{{ zone3 }}"
