--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -95,3 +95,12 @@
         resource_tags:
           name: vprofile_privsub3
       register: privsub3_out
+
+    - name: internet gateway setup
+      ec2_vpc_igw:
+        vpc_id: "{{ vpcout.vpc.id }}"
+        region: "{{ region }}"
+        state: "{{ state }}"
+        resource_tags:
+          name: vprofile_IGW
+      register: igw_out
