--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -104,3 +104,12 @@
         resource_tags:
           name: vprofile_IGW
       register: igw_out
+
+    - name: internet gateway setup 2
+      ec2_vpc_igw:
+        vpc_id: "{{ vpcout.vpc.id }}"
+        region: "{{ region }}"
+        state: "{{ state }}"
+        resource_tags:
+        name: vprofile_IGW2
+      register: igw_out2
