--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -105,3 +105,18 @@
           name: vprofile_IGW
       register: igw_out
 
+
+    - name: setup public subnet route table
+      ec2_vpc_route_table:
+        vpc_id: "{{ vpcout.vpc.id }}"
+        region: "{{ region }}"
+        resource_tags:
+          Name: Route-tables
+        subnets:
+          -  "{{pubsub1_out.subnet.id}}"
+          -  "{{privsub2_out.subnet.id}}"
+          -  "{{privsub3_out.subnet.id}}"
+        routes:
+          - dest: 0.0.0.0/0
+            gateway_id: "{{ igw_out.gateway_id }}"
+      register: pubRT_out
