--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -3,7 +3,7 @@
   gather_facts: False
   tasks:
     - name: Import VPC setup Variables
-      include_vars: vars/bastion_setup 
+      include_vars: vars/vpc_setup
 
     - name: create vprofile ec2 key
       ec2_key:
